src/objects/smagicreminder__Event_Reminder_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>smagicreminder__Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicreminder__Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicreminder__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicreminder__Error_Status_Code__c</fullName>
        <label>Error Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicreminder__Fields__c</fullName>
        <label>Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicreminder__Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicreminder__Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicreminder__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Remider_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event Reminder Error Log</label>
    <listViews>
        <fullName>smagicreminder__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>smagicreminder__Error_Message__c</columns>
        <columns>smagicreminder__Error_Status_Code__c</columns>
        <columns>smagicreminder__Fields__c</columns>
        <columns>smagicreminder__Line_Number__c</columns>
        <columns>smagicreminder__Object__c</columns>
        <columns>smagicreminder__User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Reminder Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Reminder Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>